--- a/less/index.less
+++ b/less/index.less
@@ -491,6 +491,21 @@ main {
         margin-bottom: 30px;
       }
 
+      .project-disclaimer {
+        margin-top: 0px;
+        margin-bottom: 30px;
+
+        .link {
+          color: #9ac6c9;
+        }
+
+        .link:hover {
+          color: rgb(246, 73, 167);
+          text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+          cursor: pointer;
+        }
+      }
+
       .button-container {
         display: flex;
         justify-content: space-between;
