--- a/css/index.css
+++ b/css/index.css
@@ -579,6 +579,18 @@ main {
   text-align: center;
   margin-bottom: 30px;
 }
+.all-projects-container .project-container .project-text-container .project-disclaimer {
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+.all-projects-container .project-container .project-text-container .project-disclaimer .link {
+  color: #9ac6c9;
+}
+.all-projects-container .project-container .project-text-container .project-disclaimer .link:hover {
+  color: #f649a7;
+  text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+  cursor: pointer;
+}
 .all-projects-container .project-container .project-text-container .button-container {
   display: flex;
   justify-content: space-between;
